--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
                     <span class="text-clock">3 days left</span>
                 </div>
             </div>
+            <div class="container-author">
+                <div>
+                    <img class="image-author"" src="./images/image-avatar.png" alt="">
+                </div>
+                <div class="autor">
+                    <span class="text-gray">Creation of</span>
+                    <span class="text-white">Eduardo Torres</span>
+                </div>
+            </div>
         </div>
-        
+    </div>
     </section>
 </body>
 </html>
