--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Primary Meta Tags -->
     <title>NFT-CARD</title>
+    <meta name="title" content="NFT-CARD">
+    <meta name="description" content="This is a challenge from FrontMentor">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://silabuz-frontmentor1-b2sv77ygp-edu290386.vercel.app/">
+    <meta property="og:title" content="NFT-CARD">
+    <meta property="og:description" content="This is a challenge from FrontMentor">
+    <meta property="og:image" content="https://i.postimg.cc/5NhzHH3V/Screenshot-2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://silabuz-frontmentor1-b2sv77ygp-edu290386.vercel.app/">
+    <meta property="twitter:title" content="NFT-CARD">
+    <meta property="twitter:description" content="This is a challenge from FrontMentor">
+    <meta property="twitter:image" content="https://i.postimg.cc/5NhzHH3V/Screenshot-2.png">
 </head>
 <body>
     <section class="card">
